--- a/congPic.html
+++ b/congPic.html
@@ -23,8 +23,8 @@
         font-size: 1rem;
         color: #9b37a7;
         animation: BOUNCE 5s infinite;
-        animation-direction:alternate; //反向播放
-        overflow: hidden;
+        animation-direction:alternate;//反向播放
+        overflow: hidden;;
     }
 
     .congpic {
