--- a/my/randomCircle.html
+++ b/my/randomCircle.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>葱花~</title>
+		<title>~~</title>
 	</head>
 	<body>
 		<canvas id="canvas" width="500" height="500">浏览器不支持</canvas>
