--- a/my/shoubiao.html
+++ b/my/shoubiao.html
@@ -208,7 +208,7 @@ Canvas.Clock = function() {
             me.drawMinHand(date.getMinutes() + date.getSeconds() / 60);
             me.drawSecHand(date.getSeconds());
 
-            me.drawMytext('小葱牌手表');
+            me.drawMytext('....');
 
         }
         draw();
