--- a/my/yucheng.html
+++ b/my/yucheng.html
@@ -83,14 +83,12 @@
 
 <body>
     <div style="margin-top: 5rem;">
-        <P class="demo3">祝快乐，大兄弟~</P>
+        <P class="demo3">test</P>
     </div>
     <div class="imgdiv">
         <img src="./img/yucheng.jpg" class="loveimg" />
     </div>
-    <div class="sck">
-        by sck
-    </div>
+    
 </body>
 
 </html>
